--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top_banner">
         <div class="left_side">
             <h1>Welcome to </h1>
             <h1><span class="name-focus">foyez</span> World</h1>
             <h3>Hey! I am professional web developer</h3>
             <p>Hello, This is foyez. I am a professional web developer. I can build any kind of website. If you want to make jaka naka website you can Hire me . I am very punctual.</p>
+            <a class="hire_me_button"href="https://github.com/fyz12" target="_blank">Hire Me</a>
         </div>
        <div class="right_side">
          <img src="images/first.png" alt="banner images" srcset="">
